[package]
name = "fer_net"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5" # Core Actix actor framework
actix-web = "4.11.0" # Web framework
actix-web-actors = "4.3.0" # WebSocket support for Actix Web
serde = { version = "1.0", features = [
    "derive",
] } # For serialization/deserialization
serde_json = "1.0" # For JSON operations
uuid = { version = "1.0", features = [
    "serde",
    "v4",
] } # For UUID generation and serialization
dotenv = "0.15" # For loading environment variables

jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actix-web-httpauth = "0.8.2"
chrono = "0.4.41"
